November-2015 - 0.9.2.2
- New translation: Catalan by EA3NM (Thank you!).
- Ported from Qt4 to Qt5.
- BugFix: Aether ADIF files could not be properly imported. (TNX AA5VU).
- BugFix: QSOs where not properly shown in the search box.
- BugFix: When started for the first time, no modes were shown as default.
- BugFix: CTY.CSV was not properly updated.
- BugFix: When upgrading the mode information in database some modes where not properly updated.
- GUI: Changed the year to show the full number to avoid problems with old QSO.
- Import ADIF functionality is improved to support importing of logs with some missing data.
- Removed the Spot button until its functionality is implemented.


September-2015 - 0.9.2.1
-BugFix: Band & Mode information was not properly stored.

August-2015 - 0.9.2
- Bugfix: An ADIF file with one blank line and one QSO used to froze KLog.
- Bugfix: Minor bugfix in the definition of propagation modes.
- BugFix: When editing a QSO the name was not shown.
- BugFix: STX_String field was not always imported properly.
- BugFix: Fixed a minor bug in log table regarding the prop_mode foreign key.
- BugFix: Improved the color & status shown of a QSO on the DXCC.
- BugFix: DXCluster: Fixed a bug that caused the colors to appear always as new one.
- BugFix: DXCluster: The option to show only not confirmed was not working correcty.
- BugFix: IOTA reference was not saved when entering a QSO.
- BugFix: BIGCTY.DAT was not properly download in KLog first start.
- GUI: Added some shortcuts in the preference widget.
- GUI: DXCluster: Add a suggestion to hit enter if no password is expected for the cluster. (tnx AA5VI)
- GUI: DXCluster: Warns you if the spot is needed for the current year DX-Marathon
- GUI: Added a Propagation Mode Combobox.
- GUI: Prop_Mode combobox automatically goes to SAT if sat name or sat mode are defined.
- GUI: Added a Find DX-QSL requested option.
- Added the 630M & 13CM bands.
- Updated Mode & submode definition up to ADIF 3.0.4.